--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "The server for our smool baby app",
   "main": "index.js",
   "scripts": {
-    "start": "docker-compose up -d"
+    "start:prisma": "docker-compose up -d"
   },
   "license": "MIT"
 }
