--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "@types/expo": "^31.0.7",
+    "@types/react": "^16.7.18",
+    "@types/react-native": "^0.57.27",
+    "babel-preset-expo": "^5.0.0",
+    "tslint": "^5.12.1",
+    "typescript": "^3.2.2"
   },
   "private": true
 }
