--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "graphql": "^14.0.2"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "@types/glob": "^7.1.1",
     "glob": "^7.1.3",
     "merge-graphql-schemas": "^1.5.8",
