--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,13 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^2.3.1",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "prisma-client-lib": "^1.24.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/glob": "^7.1.1",
+    "@types/graphql": "^14.0.5",
     "glob": "^7.1.3",
     "merge-graphql-schemas": "^1.5.8",
     "nodemon": "^1.18.9",
