--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^2.3.1",
+    "cookie-parser": "^1.4.3",
     "graphql": "^14.0.2",
+    "jsonwebtoken": "^8.4.0",
     "prisma-client-lib": "^1.24.0",
     "yup": "^0.26.7"
   },
