--- a/server/package.json
+++ b/server/package.json
@@ -10,16 +10,21 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^2.3.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.3",
+    "express": "^4.16.4",
     "graphql": "^14.0.2",
     "jsonwebtoken": "^8.4.0",
     "prisma-client-lib": "^1.24.0",
     "yup": "^0.26.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/glob": "^7.1.1",
     "@types/graphql": "^14.0.5",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/yup": "^0.26.4",
     "glob": "^7.1.3",
     "merge-graphql-schemas": "^1.5.8",
