--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^2.3.1",
+    "apollo-server-express": "^2.3.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
