--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
-    "start:prisma": "docker-compose up -d"
+    "start:prisma": "docker-compose up -d",
+    "gen:data": "prisma deploy && prisma generate"
   },
   "license": "MIT",
   "dependencies": {
