--- a/app/package.json
+++ b/app/package.json
@@ -13,16 +13,19 @@
     "expo": "^32.0.0",
     "formik": "^1.4.2",
     "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "react": "16.5.0",
     "react-apollo": "^2.3.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.0.0-beta7",
+    "react-native-ui-lib": "^3.15.1",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
     "@types/expo": "^31.0.7",
     "@types/react": "^16.7.18",
     "@types/react-native": "^0.57.27",
+    "@types/react-navigation": "^3.0.1",
     "babel-preset-expo": "^5.0.0",
     "tslint": "^5.12.1",
     "typescript": "^3.2.2"
