--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^2.3.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.3",
+    "dayjs": "^1.8.0",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
     "jsonwebtoken": "^8.4.0",
