--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/expo": "^31.0.7",
+    "@types/expo__vector-icons": "^6.2.3",
     "@types/react": "^16.7.18",
     "@types/react-native": "^0.57.27",
     "@types/react-navigation": "^3.0.1",
