--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "graphql": "^14.0.2",
     "jsonwebtoken": "^8.4.0",
     "prisma-client-lib": "^1.24.0",
+    "shortid": "^2.2.14",
     "yup": "^0.26.7"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/glob": "^7.1.1",
     "@types/graphql": "^14.0.5",
     "@types/jsonwebtoken": "^8.3.0",
+    "@types/shortid": "^0.0.29",
     "@types/yup": "^0.26.4",
     "glob": "^7.1.3",
     "merge-graphql-schemas": "^1.5.8",
