--- a/app/package.json
+++ b/app/package.json
@@ -20,8 +20,10 @@
     "react": "16.5.0",
     "react-apollo": "^2.3.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-circular-action-menu": "^0.5.0",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-responsive-screen": "^1.2.0",
+    "react-native-svg-icon": "^0.8.1",
     "react-native-ui-lib": "^3.15.1",
     "react-navigation": "^3.0.9"
   },
