--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "apollo-link-http": "^1.5.9",
     "apollo-link-state": "^0.4.2",
     "apollo-upload-client": "^10.0.0",
+    "dayjs": "^1.8.6",
     "expo": "^32.0.0",
     "formik": "^1.4.2",
     "graphql": "^14.1.1",
